Changes from 1.1 to 1.2
=======================

Until beta2:
------------

- bug fixes
- perfomance enhancements
- added show/hide grid on printout option
- paper layout now a property of sheet (not the whole workbook)
- header/footer now a property of sheet (not the whole workbook)
- Sort enhanced for
    - sorting by up to three rows or columns
    - possibility of putting the result of sorting some place else
    - you can use a custom lists (like days of week) as a primary key
    - option if you want to copy the layout or not
    - you can define a row header which gets copied but not sorted
- auto continuation support for every direction and all types supported in
  KSpread and for more complex series like 1,3,4,6,...
- just one "copy" instead of "copy" and "copy as text"
- insertion of series supports now doubles and decreasing series
- support for inserting data from SQL databases
- implemented "Goal Seek"

Until beta1:
------------

- bug fixes :-)
- performance enhancements
- support up to 2^15 columns and rows, formerly it was 676 columns and 10000
  rows

- add support for spell-check
- many new built-in functions (see detailed list below)
- function name is now case-insensitive
- "Related Function" in formula editor
- move functions in kspread_interpreter into several kspread_functions_*.cc

New functions added:
 conversion:
   INT2BOOL, CharToAscii, AsciiToChar, BOOL2STRING, NUM2STRING,
   BOOL2INT
 math:
   DIV, LCD, PRODUCT, LCM, TOGGLE, TRIM, ABS
 text:
   COMPARE, CLEAN, SLEEK, PROPER, REPLACE
 date/time:
   DAYS, WEEKS, MONTHS, YEARS
 financial:
   DB, SLN, SYD, EURO
 logical:
   XOR
 statistical:
   CHIDIST, FDIST, TDIST, CONFIDENCE, BETADIST, GAMMADIST, 
   PHI, GAUSS, MEDIAN, POISSON, GAMMALN, NORMINV, NORMSINV, 
   WEIBULL, EXPONDIST, NORMDIST, NORMSDIST, FISHER, 
   FISHERINV, LOGNORMDIST
  